# EuronextAdminAPI

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  TestManager.cpp  dockercommand.tx  dockerfile  server.cpp
include/: DatabaseManager.h  TokenManager.h
src/: DatabaseManager.cpp  TokenManager.cpp  server.cpp
tests/: CreateDB  CreateDB.cpp
